fix(TS): Stop freeform editor from overflowing TS

--- a/src/renderer/issue-editor/styles.scss
+++ b/src/renderer/issue-editor/styles.scss
@@ -43,7 +43,7 @@
 }
 
 :local .messageEditorDialog {
-  max-height: 95vh;
+  max-height: 90vh;
 
   :global .bp3-label:last-child,
   :global .bp3-form-group:last-child {
@@ -53,6 +53,7 @@
   :global .bp3-dialog-body {
     display: flex;
     flex-flow: column nowrap;
+    overflow-y: hidden;
   }
 }
 
@@ -84,6 +85,7 @@
 :local .freeformEditor {
   display: flex;
   flex-flow: column nowrap;
+  overflow-y: hidden;
 
   :global .ProseMirror {
     flex: 1;
